--- a/css/styles.css
+++ b/css/styles.css
@@ -58,31 +58,34 @@ header {
     display: inline;
     width: 50pt;
     height: 50pt;
-}
-.feeling .imgmood img{
-    width: 50pt;
-    height: 50pt;
-    background-image: url("../res/img/happy.png");
+    margin-left: 100px;
+    margin-top: -24px;
+    background-image: url(../res/img/happy.png);
     background-repeat: no-repeat;
     background-size: contain;
+    float: right;
 }
 
 .content .where,.when {
     margin-top: 45px;
 }
 
-.content .where,.when button {
+.content .where button,.content .when button {
     margin-top: 20pt;
 }
 
 .content .when {
     margin-top: 30px;
 }
-
+.when .btnbelow{
+    margin-top:5px !important;
+}
 .quality button {
     color: rgba(243, 92, 102, 1);
 }
-
+.spend,.howfar,.quality{
+    margin-top: 20pt!important;
+}
 button {
     width: 147pt;
     height: 47pt;
@@ -100,7 +103,7 @@ button:hover {
 /*RANGE INPUT PERSONALIZATION*/
 input[type=range] {
     -webkit-appearance: none;
-    margin: 10px 0;
+    margin:30px 0;
     width: 100%;
 }
 
